# protPy

./: .gitignore  .readthedocs.yml  CHANGELOG.md  DESCRIPTORS.md  LICENSE  MANIFEST.in  README.md  ToDo.md  coverage.txt  coverage1.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: README.md  build_test.yml  deploy_pypi.yml  deploy_test_pypi.yml
docs/: README.md  api.rst  changelog.rst  conf.py  contributing.rst  descriptors.rst  index.rst  requirements.txt  usage.rst
docs/source/: conf.py  index.rst
examples/: protpy_tutorial.ipynb
protpy/: README.md  __init__.py  _constants.py  autocorrelation.py  composition.py  conjoint_triad.py  ctd.py  sequence_order.py  utils.py
protpy/data/: README.md  grantham-physicochemical-distance-matrix.json  grantham-physiochemical-distance-matrix.json
tests/: README.md  test_autocorrelation.py  test_composition.py  test_conjoint_triad.py  test_ctd.py  test_fasta1.fasta  test_fasta2.fasta  test_fasta4.fasta  test_protpy.py  test_sequence_order.py  test_utils.py
tests/test_data/: test_fasta3.fasta
