[metadata]
name = protpy
version = 1.0.4
description = Python package for generating various biochemical, physiochemical and structural descriptors/features of protein sequences.
author = AJ McKenna
author_email = amckenna41@qub.ac.uk
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/amckenna41/protpy
download_url = https://github.com/amckenna41/protpy/archive/refs/heads/main.zip
license = MIT
maintainer = AJ McKenna
keywords = 
    bioinformatics
    protein engineering
    python
    pypi
    machine learning
    aaindex
    protein descriptors
    physiochemical descriptors
    biochemical descriptors
    structural descriptors

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
zip_safe = false
packages = find:
python_requires = >=3.6
include_package_data = True

install_requies =
   numpy
   pandas
   varname
   aaindex

[options.extras_require]
test_suite = tests
test =
    pytest
    pytest-cov
    pytest-flake8
    pytest-timeout
docs =
    sphinx

[tool:pytest]
norecursedirs = /docs/_build/*